<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3CFFEB3B"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#AD009688"
        android:text="@string/my_today_meal"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addFoodTx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:hint="@string/add_new_food_choice"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.897" />

    <Button
        android:id="@+id/getFoodBut"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/click_to_get_the_food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFoodTx" />

    <TextView
        android:id="@+id/selfoodTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/food_chosen"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addFoodTx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <Button
        android:id="@+id/clearBt"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#E91E63"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/getFoodBut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFoodTx"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="#E91E63" />

    <Button
        android:id="@+id/addFoodBt"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/add_food"
        app:layout_constraintBottom_toTopOf="@+id/getFoodBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toEndOf="@+id/clearBt"
        app:layout_constraintTop_toBottomOf="@+id/addFoodTx"
        app:layout_constraintVertical_bias="0.09"
        app:strokeColor="#E91E63" />

</androidx.constraintlayout.widget.ConstraintLayout>